fix image sizing on small screens

--- a/static/css/new_search.css
+++ b/static/css/new_search.css
@@ -1058,7 +1058,7 @@ body {
 
 .grid-container {   
    display: grid;
-   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
    grid-gap: 20px;
    grid-auto-flow: row;
    margin: 1rem;
